--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,8 +6,8 @@
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
     <%= csrf_meta_tags %>
-    <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css'>
-    <link href='https://fonts.googleapis.com/css?family=Lato:700,400|Fredericka+the+Great' rel='stylesheet' type='text/css'>
+    <link rel='stylesheet' href='//maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css'>
+    <link href='//fonts.googleapis.com/css?family=Lato:700,400|Fredericka+the+Great' rel='stylesheet' type='text/css'>
   </head>
   <body>
     <%= render 'layouts/header' %>
