added back button

--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -23,4 +23,8 @@
   <%= f.hidden_field :id %>
 
   <%= f.submit submit_text, class: 'btn btn-primary' %>
+
+  <%= link_to '/lists/' + params[:list_id].to_s, class: 'btn btn-default pull-right' do %>
+    <i class='fa fa-arrow-left'></i> Back
+  <% end %>
 <% end %>
