--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -1,18 +1,24 @@
 <h2>Add a Piece of Gear</h2>
 
-<h4>Enter the details:</h4>
+<% unless from_search? %>
+  <h4>Search for an Item:</h4>
+
+  <%= form_tag(list_search_items_path, method: 'get', class: 'form-inline', id: 'item-search-form') do %>
+    <div class='input-append'>
+      <%= text_field_tag :search, params[:search], class: 'form-control', placeholder: 'Search for an item...' %>
+      <button class='btn btn-default' type='submit'><span class='glyphicon glyphicon-search' aria-hidden='true'> Search</span></button>
+    </div>
+  <% end %>
+<% end %>
+
+<% if from_search? %>
+  <h4>Fill out Section and Quantity</h4>
+<% else %>
+  <h4>Or Create a Custom Item:</h4>
+<% end %>
 
 <%= render partial: 'form', locals: {
                               url: list_items_path(params[:list_id]),
                               method: 'post',
                               submit_text: 'Add Item'
                             } %>
-
-<h4>Or search for an item:</h4>
-
-<%= form_tag(list_search_items_path, method: 'get', class: 'form-inline', id: 'item-search-form') do %>
-  <div class='input-append'>
-    <%= text_field_tag :search, params[:search], class: 'form-control', placeholder: 'Search for an item...' %>
-    <button class='btn btn-default' type='submit'><span class='glyphicon glyphicon-search' aria-hidden='true'> Search</span></button>
-  </div>
-<% end %>
