added margin to start-over button

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -93,6 +93,10 @@ body {
   color: rgb(217,83,79);
 }
 
+.start-over-btn {
+  margin-left: 3rem;
+}
+
 div.gearlist-panel {
   margin: 3rem auto;
   width: auto;
