edited h4 from_search

--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -12,7 +12,7 @@
 <% end %>
 
 <% if from_search? %>
-  <h4>Fill out Section and Quantity</h4>
+  <h4>Finish Creating Your Item:</h4>
 <% else %>
   <h4>Or Create a Custom Item:</h4>
 <% end %>
